--- a/app/src/main/res/layout/information_song_fragment.xml
+++ b/app/src/main/res/layout/information_song_fragment.xml
@@ -9,13 +9,14 @@
     android:fitsSystemWindows="true">
 
     <ScrollView
+        android:id="@+id/scrollView2"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/grey">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/grey">
+            android:layout_height="wrap_content">
 
             <ImageView
                 android:id="@+id/information_background_image_view"
@@ -28,19 +29,19 @@
                 app:layout_constraintTop_toTopOf="parent"
                 tools:ignore="ContentDescription" />
 
-        <android.support.v7.widget.CardView
+            <android.support.v7.widget.CardView
                 android:id="@+id/head_card_view"
-                android:layout_width="152dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="86dp"
-                android:layout_marginEnd="16dp"
-                card_view:cardElevation="1dp"
-                card_view:cardCornerRadius="5dp"
-                card_view:cardPreventCornerOverlap="false"
+                android:layout_marginEnd="8dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/information_background_image_view">
+                app:layout_constraintTop_toTopOf="@+id/information_background_image_view"
+                card_view:cardCornerRadius="5dp"
+                card_view:cardElevation="1dp"
+                card_view:cardPreventCornerOverlap="false">
 
                 <android.support.constraint.ConstraintLayout
                     android:layout_width="match_parent"
@@ -52,42 +53,121 @@
                         android:layout_height="200dp"
                         android:layout_alignParentStart="true"
                         android:layout_alignParentTop="true"
-                        android:layout_marginTop="16dp"
                         android:fitsSystemWindows="true"
                         android:scaleType="centerCrop"
-
-                        app:layout_constraintEnd_toEndOf="@+id/minor_head_text_view"
-                        app:layout_constraintStart_toStartOf="@+id/minor_head_text_view"
-                        app:layout_constraintTop_toBottomOf="@+id/minor_head_text_view"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
                         tools:ignore="ContentDescription" />
 
                     <TextView
                         android:id="@+id/head_main_text_view"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="8dp"
-                        android:layout_marginTop="24dp"
-                        android:layout_marginEnd="8dp"
+                        android:layout_marginTop="16dp"
+                        android:layout_marginBottom="8dp"
                         android:gravity="center"
                         android:singleLine="false"
                         android:textColor="@color/text_gray_dark"
                         android:textSize="14sp"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="@+id/minor_head_text_view"
+                        app:layout_constraintHorizontal_bias="0.489"
+                        app:layout_constraintStart_toStartOf="@+id/minor_head_text_view"
+                        app:layout_constraintTop_toBottomOf="@+id/minor_head_text_view"
                         tools:text="Prodigy" />
 
                     <TextView
                         android:id="@+id/minor_head_text_view"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
                         android:layout_marginTop="8dp"
+                        android:layout_marginEnd="8dp"
                         android:text="Voodoo people"
                         android:textColor="@color/text_gray_dark"
-                        app:layout_constraintEnd_toEndOf="@+id/head_main_text_view"
-                        app:layout_constraintStart_toStartOf="@+id/head_main_text_view"
-                        app:layout_constraintTop_toBottomOf="@+id/head_main_text_view"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/content_image_view"
                         tools:ignore="HardcodedText" />
+
+                </android.support.constraint.ConstraintLayout>
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
+                android:id="@+id/information_music_card_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="16dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="@+id/head_card_view"
+                app:layout_constraintStart_toStartOf="@+id/head_card_view"
+                app:layout_constraintTop_toBottomOf="@+id/information_background_image_view"
+                card_view:cardCornerRadius="5dp"
+                card_view:cardElevation="1dp"
+                card_view:cardPreventCornerOverlap="false">
+
+                <android.support.constraint.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <TextView
+                        android:id="@+id/collection_name_title"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginTop="8dp"
+                        android:gravity="center"
+                        android:singleLine="false"
+                        android:text="@string/album_name"
+                        android:textColor="@color/text_gray_dark"
+                        android:textSize="14sp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:id="@+id/collection_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="24dp"
+                        android:gravity="center"
+                        android:singleLine="false"
+                        android:textColor="@color/text_gray_dark"
+                        android:textSize="14sp"
+                        app:layout_constraintStart_toEndOf="@+id/collection_name_title"
+                        app:layout_constraintTop_toTopOf="@+id/collection_name_title"
+                        tools:text="My album" />
+
+                    <TextView
+                        android:id="@+id/track_price_title"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginBottom="8dp"
+                        android:gravity="center"
+                        android:singleLine="false"
+                        android:text="@string/track_price"
+                        android:textColor="@color/text_gray_dark"
+                        android:textSize="14sp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/collection_name_title" />
+
+                    <TextView
+                        android:id="@+id/track_price"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:singleLine="false"
+                        android:textColor="@color/text_gray_dark"
+                        android:textSize="14sp"
+                        app:layout_constraintStart_toStartOf="@+id/collection_name"
+                        app:layout_constraintTop_toTopOf="@+id/track_price_title"
+                        tools:text="0.99$" />
 
                 </android.support.constraint.ConstraintLayout>
             </android.support.v7.widget.CardView>
