--- a/app/src/main/res/layout/splash_screen_fragment.xml
+++ b/app/src/main/res/layout/splash_screen_fragment.xml
@@ -6,6 +6,15 @@
     android:layout_height="match_parent"
     android:background="@color/status_bar_light_color">
 
+    <ProgressBar
+        android:id="@+id/image_progress_bar"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_gravity="center"
+        android:theme="@style/AppTheme.WhiteAccent"
+        android:visibility="visible"
+        app:layout_constraintBottom_toTopOf="@+id/cl_information"/>
+
     <android.support.v7.widget.CardView
         android:layout_width="80dp"
         android:layout_height="80dp"
