--- a/app/src/main/res/layout/splash_screen_fragment.xml
+++ b/app/src/main/res/layout/splash_screen_fragment.xml
@@ -6,14 +6,15 @@
     android:layout_height="match_parent"
     android:background="@color/status_bar_light_color">
 
-    <ProgressBar
-        android:id="@+id/image_progress_bar"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/launch_animation_lottie"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_gravity="center"
-        android:theme="@style/AppTheme.WhiteAccent"
-        android:visibility="visible"
-        app:layout_constraintBottom_toTopOf="@+id/cl_information"/>
+        app:lottie_colorFilter="@color/splash_view_background"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_fileName="launch_animation.json"/>
 
     <android.support.v7.widget.CardView
         android:layout_width="80dp"
