--- a/app/src/main/res/layout/layout_song_card_form.xml
+++ b/app/src/main/res/layout/layout_song_card_form.xml
@@ -60,7 +60,7 @@
                 android:maxLines="2"
                 android:singleLine="false"
                 android:text="@string/songs"
-                android:textColor="@color/w"
+                android:textColor="@color/separator_gray"
                 android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
