--- a/app/src/main/res/layout/bottom_navigation_fragment.xml
+++ b/app/src/main/res/layout/bottom_navigation_fragment.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,29 +7,55 @@
     android:fitsSystemWindows="true"
     tools:context="com.nimtego.plectrum.presentation.ui.activity.AppActivity">
 
-        <android.support.v7.widget.CardView
-            android:id="@+id/cardS"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="6dp"
-            android:layout_marginEnd="6dp"
-            app:cardCornerRadius="10dp"
-            app:cardElevation="4dp"
-            app:cardUseCompatPadding="true">
-            <!--app:layout_behavior="com.nimtego.plectrum.presentation.ui.widget.behavior.BottomNavigationBehavior"-->
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fitsSystemWindows="true"
+        android:background="@color/color_background_dark"
+        app:layout_behavior="com.nimtego.plectrum.presentation.ui.widget.behavior.AppBarLayoutBehaviorFix">
 
-            <android.support.v7.widget.SearchView
-                android:id="@+id/search_edit_text"
-                android:layout_width="wrap_content"
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/tool_bar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:minHeight="?attr/actionBarSize"
+            android:contentInsetLeft="0dp"
+            android:contentInsetStart="0dp"
+            app:contentInsetLeft="0dp"
+            app:contentInsetStart="0dp"
+            android:contentInsetRight="0dp"
+            android:contentInsetEnd="0dp"
+            app:contentInsetRight="0dp"
+            app:contentInsetEnd="0dp"
+            app:layout_collapseMode="pin"
+            app:layout_scrollFlags="scroll|snap|enterAlways"
+            app:popupTheme="@style/MyMaterialTheme.Base">
+
+            <android.support.v7.widget.CardView
+                android:id="@+id/cardS"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:elevation="2dp"
-                android:background="@drawable/rounded_shape"
-                android:gravity="center_vertical"
-                android:hint="@string/search"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:theme="@style/MySearchViewStyle" />
-        </android.support.v7.widget.CardView>
+                android:layout_marginStart="6dp"
+                android:layout_marginEnd="6dp"
+                app:cardCornerRadius="10dp"
+                app:cardElevation="4dp"
+                app:cardUseCompatPadding="true">
+                <!--app:layout_behavior="com.nimtego.plectrum.presentation.ui.widget.behavior.BottomNavigationBehavior"-->
+
+                <android.support.v7.widget.SearchView
+                    android:id="@+id/search_edit_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end"
+                    android:background="@drawable/rounded_shape"
+                    android:elevation="2dp"
+                    android:gravity="center_vertical"
+                    android:hint="@string/search"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:theme="@style/MySearchViewStyle" />
+            </android.support.v7.widget.CardView>
+        </android.support.v7.widget.Toolbar>
+    </android.support.design.widget.AppBarLayout>
 
     <FrameLayout
         android:id="@+id/bottom_navigation_container"
@@ -46,9 +71,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:background="@color/color_bottom_sheet_navigation_bar"/>
+        android:background="@color/color_bottom_sheet_navigation_bar" />
 </android.support.design.widget.CoordinatorLayout>
 
-    <!--app:layout_constraintStart_toStartOf="parent"-->
-    <!--app:layout_constraintBottom_toBottomOf="parent"-->
+    <!--app:layout_constraintStart_toStartOf="parent"--><!--app:layout_constraintBottom_toBottomOf="parent"-->
 
