--- a/app/src/main/res/layout/bottom_parent_tab_fragment.xml
+++ b/app/src/main/res/layout/bottom_parent_tab_fragment.xml
@@ -2,6 +2,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/divider_color_light"
     android:layout_gravity="fill_vertical">
 
     <android.support.v7.widget.RecyclerView
