--- a/app/src/main/res/layout/more_section_fragment.xml
+++ b/app/src/main/res/layout/more_section_fragment.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:background="@color/divider_color_light"
     android:layout_height="match_parent">
 
     <android.support.v7.widget.RecyclerView
@@ -8,6 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clipToPadding="false"
+        android:paddingTop="50dp"
         android:paddingBottom="50dp"
         android:layoutAnimation="@anim/layout_animation_fall_down"
         android:scrollbars="vertical"
