--- a/app/src/main/res/layout/bottom_navigation_fragment.xml
+++ b/app/src/main/res/layout/bottom_navigation_fragment.xml
@@ -10,23 +10,23 @@
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fitsSystemWindows="true"
         android:background="@color/color_background_dark"
+        android:fitsSystemWindows="true"
         app:layout_behavior="com.nimtego.plectrum.presentation.ui.widget.behavior.AppBarLayoutBehaviorFix">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/tool_bar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:minHeight="?attr/actionBarSize"
-            android:contentInsetLeft="0dp"
             android:contentInsetStart="0dp"
-            app:contentInsetLeft="0dp"
-            app:contentInsetStart="0dp"
-            android:contentInsetRight="0dp"
+            android:contentInsetLeft="0dp"
             android:contentInsetEnd="0dp"
-            app:contentInsetRight="0dp"
+            android:contentInsetRight="0dp"
+            android:minHeight="?attr/actionBarSize"
             app:contentInsetEnd="0dp"
+            app:contentInsetLeft="0dp"
+            app:contentInsetRight="0dp"
+            app:contentInsetStart="0dp"
             app:layout_collapseMode="pin"
             app:layout_scrollFlags="scroll|snap|enterAlways"
             app:popupTheme="@style/MyMaterialTheme.Base">
@@ -61,49 +61,49 @@
             android:layout_width="match_parent"
             android:layout_height="36dp"
             android:layout_gravity="bottom"
-            android:layout_marginEnd="16dp"
-            android:layout_marginStart="16dp"
+
             android:layout_marginBottom="8dp"
-            app:tabMode="scrollable"
-            app:tabContentStart="0dp"
-            app:tabIndicatorHeight="0dp"
-            app:tabTextAppearance="@style/TabTextAppearance"
-            app:tabBackground="@drawable/tab_layout_selector"
-            app:tabSelectedTextColor="@color/click_accent"
             android:background="@drawable/tab_layout_background"
-            android:theme="@style/PrimaryButton">
+            android:theme="@style/PrimaryButton"
+            android:visibility="gone"
+            app:tabBackground="@drawable/tab_layout_selector"
+            app:tabContentStart="16dp"
+            app:tabIndicatorHeight="0dp"
+            app:tabMode="scrollable"
+            app:tabSelectedTextColor="@color/click_accent"
+            app:tabTextAppearance="@style/TabTextAppearance">
 
             <android.support.design.widget.TabItem
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Left" />
+                android:text="Track" />
 
             <android.support.design.widget.TabItem
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Center" />
+                android:text="Albums" />
 
             <android.support.design.widget.TabItem
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Right" />
+                android:text="Author" />
 
             <android.support.design.widget.TabItem
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Left" />
+                android:text="Movie" />
 
             <android.support.design.widget.TabItem
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Center" />
+                android:text="Books" />
 
             <android.support.design.widget.TabItem
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Right" />
+                android:text="Director" />
 
-</android.support.design.widget.TabLayout>
+        </android.support.design.widget.TabLayout>
 
     </android.support.design.widget.AppBarLayout>
 
