--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -58,7 +58,7 @@
     <!--</style>-->
 
     <style name="AppTheme.WhiteAccent">
-        <item name="colorAccent">@color/click_accent</item> <!-- Whatever color you want-->
+        <item name="colorAccent">@color/click_accent</item>
     </style>
 
     <style name="MySearchViewStyle" parent="Widget.AppCompat.SearchView">
